--- a/keama/keama.8
+++ b/keama/keama.8
@@ -1,6 +1,6 @@
 .\"	keama.8
 .\"
-.\" Copyright (c) 2017, 2018 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2017-2019 by Internet Systems Consortium, Inc. ("ISC")
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
