[master] Pre-release tag prep for 4.4.2: version #, copyright etc...
 Changes to be committed:
	modified:   LICENSE
	modified:   README
	modified:   RELNOTES
	modified:   client/dhclient.c
	modified:   common/discover.c
	modified:   configure
	modified:   configure.ac
	modified:   configure.ac+lt
	modified:   configure.ac-base
	modified:   configure.ac-lt
	modified:   relay/dhcrelay.c
	modified:   relay/tests/relay_unittests.c
	modified:   server/dhcpd.c
	modified:   server/failover.c
	modified:   util/bind.sh

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-			     Version 4.4.2b1
-			    12 December 2019
+			     Version 4.4.2
+			    22 January 2020
 
 			      README FILE
 
@@ -97,12 +97,12 @@ directory, it may not have up-to-date information).
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.4.2b1.tar.gz
-	tar xvf dhcp-4.4.2b1.tar
+	gunzip dhcp-4.4.2.tar.gz
+	tar xvf dhcp-4.4.2.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.4.2b1 subdirectory that you've just created and
+Now, cd to the dhcp-4.4.2 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
