[#108] Corrected a typo in dhcpd.conf.5

--- a/server/dhcpd.conf.5
+++ b/server/dhcpd.conf.5
@@ -322,7 +322,7 @@ Currently it is only allowed within a \fBsubnet6\fR declaration, and
 may not be included directly in a shared network declaration.
 In addition to the \fBrange6\fR statement it allows the \fBprefix6\fR
 statement to be included.  You may include \fBrange6\fR statements
-for both NA and TA and \fBprefixy6\fR statements in a single
+for both NA and TA and \fBprefix6\fR statements in a single
 \fBpool6\fR statement.
 .SH DYNAMIC ADDRESS ALLOCATION
 Address allocation is actually only done when a client is in the INIT
