Added dhcp-options.5 entry

--- a/common/dhcp-options.5
+++ b/common/dhcp-options.5
@@ -1243,6 +1243,14 @@ The domain name of the LoST server for the client to use.
 This option is included based on RFC 5223.
 .RE
 .PP
+.B option \fBv6-only-preferred\fR \fIuint32\fR\fB;\fR
+.RS 0.25i
+.PP
+The number of seconds the client should disable DHCPv4 for.
+.PP
+This option and its use by the client are specified in RFC 8925.
+.RE
+.PP
 .B option \fBvendor-class-identifier\fR \fIstring\fR\fB;\fR
 .RS 0.25i
 .PP
