--- a/README
+++ b/README
@@ -63,11 +63,11 @@ client lease database is documented in the dhclient.leases man page.
 The source for all these man pages is in the client/ subdirectory in
 the distribution.   In addition, the dhcp-options man page should be
 referred to for information about DHCP options. The client component
-is reaching End-of-Life and will not be part of future releases.
+is End-of-Life and will not be part of future releases.
 
 DHCP relay agent documentation is in the dhcrelay man page, the source
 for which is distributed in the relay/ subdirectory. The relay component
-is reaching End-of-Life and will not be part of future releases.
+is End-of-Life and will not be part of future releases.
 
 KEA Migration Assistant documentation, including how to build, install
 and use it, is including in the keama/ directory.
@@ -91,6 +91,12 @@ Please note that the pathnames of files to which our manpages refer
 will not be correct for your operating system until after you iterate
 'make install' (so if you're reading a manpage out of the source
 directory, it may not have up-to-date information).
+
+				RELEASE STATUS
+
+Version 4.4.3 is a maintenance release of the DHCP client, relay and 
+server. It is the final release for the client and relay components, 
+which have reached end-of-life and will no longer be maintained. 
 
 		    BUILDING THE DHCP DISTRIBUTION
 
