Fix typo reported by user

--- a/server/dhcpd.conf.5
+++ b/server/dhcpd.conf.5
@@ -3102,7 +3102,7 @@ statement
 .I seconds\fR\fB;\fR
 .PP
 IPv6 addresses have \'valid\' and \'preferred\' lifetimes.  The valid lifetime
-determines at what point at lease might be said to have expired, and is no
+determines at what point a lease might be said to have expired, and is no
 longer useable.  A preferred lifetime is an advisory condition to help
 applications move off of the address and onto currently valid addresses
 (should there still be any open TCP sockets or similar).
