[#229] Updated release notes and readme to 4.4.3

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-			     Version 4.4.3b1
-			    26 January 2022
+			     Version 4.4.3
+			     9 March 2022
 
 			      README FILE
 
